# Poland-NGO-Finanse

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  tailwind.config.js
public/: legal-updates.json
scripts/: install_ollama.ps1  install_ollama.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs
src-tauri/src/commands/: admin_logs.rs  auth.rs  backup.rs  bills.rs  email.rs  employees.rs  invoices.rs  ledger.rs  legal.rs  mod.rs  ollama.rs  payroll.rs  receipts.rs  service_providers.rs  settings.rs
src/components/Auth/: LoginPage.tsx
src/components/Layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/components/modules/Bills/: BillsModule.tsx
src/components/modules/Dashboard/: DashboardModule.tsx
src/components/modules/Invoicing/: InvoicingModule.tsx
src/components/modules/Payroll/: PayrollModule.tsx
src/components/modules/Receipts/: ReceiptsModule.tsx
src/components/modules/Reports/: ReportsModule.tsx
src/components/modules/ServiceProviders/: ServiceProvidersModule.tsx
src/components/modules/Settings/: SettingsModule.tsx
src/contexts/: AuthContext.tsx  LegalUpdatesContext.tsx  ThemeContext.tsx
src/data/: mockData.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  pl.json
src/lib/: invoke.ts
src/types/: index.ts
