[package]
name = "krakow-ngo-accounting"
version = "0.1.0"
description = "KrakowNGO Finanse - System finansowy dla organizacji non-profit"
authors = ["Fundacja Pomocna Dłoń"]
license = ""
repository = ""
default-run = "krakow-ngo-accounting"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
