[package]
name = "krakow-ngo-accounting"
version = "0.1.0"
description = "KrakowNGO Finanse - System finansowy dla organizacji non-profit"
authors = ["Fundacja Pomocna Dłoń"]
license = ""
repository = ""
default-run = "krakow-ngo-accounting"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "dialog-open", "dialog-save",
  "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir",
  "shell-open", "http-request"
] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
